src/main/shell/libs/k8s/addon/defaults/1.30/kubernetes-dashboard/kubernetes-dashboard-ingress.yaml
# Kubernetes Dashboard Ingress
# NOTE: Update host to your domain
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.example.com  # TODO: Change to your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
